# js-build-times-chopping

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  jest.config.js  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: main.yaml
apps/frontend/: BUILD.bazel  index.html
apps/frontend/src/: main.test.ts  main.tsx  styles.css
apps/frontend/src/app/: App.tsx
menus/pizza/: BUILD.bazel  index.ts  oven.test.js  topping.test.js  tsconfig.json
menus/pizza/src/: pizza.ts
menus/steak/: BUILD.bazel  sizzling.test.js
tools/: bazel_deps.bzl  jest.bzl  workspace_status.sh
